syntax = "proto3";

package protobuf;

message SensorReading {
  int32 sensorId = 1;
  int64 timestamp = 2;
  float temperature = 3;
  float humidity = 4;
}